# gunicorn-django-canonical-logs

./: .gitignore  README.md  pyproject.toml  server.sh
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
src/gunicorn_django_canonical_logs/: __about__.py  glogging.py  logfmt.py  partial_failure.py  stack_context.py
src/gunicorn_django_canonical_logs/gunicorn_hooks/: registry.py
src/gunicorn_django_canonical_logs/instrumenters/: __init__.py  database.py  exception.py  protocol.py  request.py  saturation.py
src/gunicorn_django_canonical_logs/monitors/: saturation.py  timeout.py
src/gunicorn_django_wide_events/: __init__.py  context.py  event_context.py  glogging.py  hooks.py  logfmt.py  registered_hooks.py  stack_context.py  util.py
src/gunicorn_django_wide_events/gunicorn_hooks/: __init__.py  hooks.py  registered_hooks.py
src/gunicorn_django_wide_events/instrumenters/: __init__.py  base.py  database.py  exception.py  gunicorn_hooks.py  instrumenters.py  request.py  saturation.py
src/gunicorn_django_wide_events/monitors/: __init__.py  arbiter.py  saturation.py  timeout.py
tests/: test_context.py  test_event_context.py  test_gunicorn_hooks.py  test_hooks.py  test_integration.py  test_logfmt.py  test_server.py  test_stack_context.py
tests/instrumenter_tests/: test_database.py  test_exception.py  test_request.py  test_saturation.py
tests/server/: app.py  gunicorn_config.py  settings.py
tests/server/templates/: callable_exception.html
